# sdl-bindgen

./: .gitmodules  Cargo.toml  README.md
sdl-build/: Cargo.toml
sdl-build/src/: generate.rs  lib.rs
sdl-gfx-bindgen/: Cargo.toml  build.rs  wrapper.h
sdl-image-bindgen/: Cargo.toml  build.rs
sdl-sys-bindgen/: Cargo.toml  build.rs
sdl-sys-bindgen/examples/: hello_world.rs
sdl-ttf-bindgen/: Cargo.toml  build.rs
