[package]
name = "sdl-gfx-bindgen"
version = "0.1.0+SDL3gfx-1.0.1"
edition = "2024"
license = "Zlib"
repository = "https://github.com/achusbyr/sdl-bindgen"
description = "FFI bindings for SDL3_gfx via bindgen"
links = "SDL3_gfx"

[dependencies]
sdl-sys-bindgen = "0.1"

[build-dependencies]
sdl-build = "0.1"

[lints.clippy]
approx_constant = "allow"