[package]
name = "sdl-image-bindgen"
version = "0.1.0+SDLimage-3.2.6"
edition = "2024"
license = "Zlib"
repository = "https://github.com/achusbyr/sdl-bindgen"
description = "FFI bindings for SDL_image via bindgen"
links = "SDL3_image"
exclude = [
    "/SDL_image/external/aom",
    "/SDL_image/external/dav1d",
    "/SDL_image/external/libavif",
    "/SDL_image/external/libjxl",
    "/SDL_image/external/libtiff",
    "/SDL_image/external/libwebp",
    "/SDL_image/external/SDL",
    "/SDL_image/VisualC/external/optional",
]

[dependencies]
sdl-sys-bindgen = "0.1"

[build-dependencies]
sdl-build = "0.1"

[lints.clippy]
approx_constant = "allow"
