[package]
name = "sdl-ttf-bindgen"
version = "0.1.0+SDLttf-3.2.2"
edition = "2024"
license = "Zlib"
repository = "https://github.com/achusbyr/sdl-bindgen"
description = "FFI bindings for SDL_ttf via bindgen"
links = "SDL3_ttf"

[dependencies]
sdl-sys-bindgen = "0.1"

[build-dependencies]
sdl-build = "0.1"

[lints.clippy]
approx_constant = "allow"